// Get gogo proto: go get github.com/gogo/protobuf/protoc-gen-gofast
// Run protoc --gofast_out=plugins=grpc:. *.proto to generate the .pb.go from 
// with the directory that contains the proto file
syntax="proto3";
package interact;

service GruQuiz {
	rpc Authenticate (Token) returns (Session) {}
	rpc GetQuestion (Req) returns (Question) {}
	rpc Status (Response) returns (AnswerStatus) {}
	rpc Ping (ClientStatus) returns (ServerStatus) {}
}

message ServerStatus {
	string timeLeft = 1;
	string status = 2;
}

message ClientStatus {
	string curQuestion = 1;
	string token = 2;
}

message Token {
	string id = 1;
}

message QUIZ {
	enum state {
		DEMO_NOT_TAKEN = 0;
		DEMO_STARTED = 1;
		TEST_NOT_TAKEN = 2;
		TEST_STARTED = 3;
		TEST_FINISHED = 4;
	}
}

message Session {
	string id = 1;
	QUIZ.state state = 2;
	string timeLeft = 3;
	string testDuration = 4;
	string demoDuration = 5;
}

message Req {
	bool repeat = 1;
	string sid = 2;
	string token = 3;
}

message Question {
	string id = 1;
	string str = 2;
	repeated Answer options = 3;
	bool isMultiple = 4;
	float positive = 6;
	float negative = 7;
	float score = 8;
}

message Answer {
	string id = 1;
	string str = 2;
}

message Response {
	string qid = 1;
	repeated string aid = 2;
	string sid = 3;
	string token = 4;
}

message AnswerStatus {
	int64 status = 1; // 1 - right answer | 2 - wrong answer
}

